# face_verification_demo

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.ini  run.sh
src/: V4L2Device.cpp  V4L2Device.h  camera_cv_state.h  common.cpp  common.h  config_reader.cpp  config_reader.h  face_verification_demo.cpp  face_verification_demo.hpp
src/cv/: blur_detection.cpp  blur_detection.hpp  caffe_face_detection.cpp  caffe_face_detection.hpp  caffe_face_landmark_detection.cpp  caffe_face_landmark_detection.hpp  caffe_face_verification.cpp  caffe_face_verification.hpp  face_verification.cpp  face_verification.h  face_verification_data.hpp  util.hpp
src/inih/: ini.h
test_data/: face.avi
yolo/lib/: libdarknet.so.0
